syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.ds.service1";
option java_outer_classname = "Service1Impl";

package service1;

// Interface exported by the server.
service Service1 {
  
  rpc TurnOn(stream LightRequest) returns (LightResponse) {}
  rpc TurnOff(stream LightRequest) returns (LightResponse) {}
}

message LightRequest {
  string lightNumber = 1;  
}

message LightResponse {
    string lightNumber = 1;
    bool status = 2;
}